--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.63.0",
+    "react-imask": "^7.6.1",
     "react-router-dom": "^7.9.1",
     "vite-plugin-svgr": "^4.5.0",
     "zod": "^4.1.11"
