--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build --mode production",
-    "git-page": "tsc -b && vite build --base=/agc-react/",
+    "git-page": "tsc -b && vite build --base=/admin-casa/",
     "lint": "eslint .",
     "preview": "vite preview"
   },
